--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <header>
-  <link type="text/css" rel="stylesheet" href="/styles.css"/>
+  <link type="text/css" rel="stylesheet" href="styles.css"/>
   
   
  </header>
