--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <h1>Crafty Bee James</h1>
   <p>Welcome to my website!</p>
+ <div class="pink">
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ </div>
 </body>
  
 </html>
