--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
  <div class="pink">
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
  </div>
+ <div class="blue">
+ </div>
 </body>
  
 </html>
