--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>The Best Crochet</h1>
   </div>
  <div class="pink">
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="crochet-header.jpg" />
  </div>
  <div class="blue">
  </div>
