--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>The Best Crochet</h1>
   </div>
  <div class="pink">
-  <img src="crochet-header.jpg" />
+  <img src="https://images.unsplash.com/photo-1455267847942-f4fdb784f0c5?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb" />
  </div>
  <div class="blue">
  </div>
