--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
 <body>
   <h1>Crafty Bee James</h1>
-   <div class='header'>
+   <div class="header1">
     <h1>The Best Crochet</h1>
   </div>
  <div class="pink">
