--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
- <header>
+ <head>
   <link type="text/css" rel="stylesheet" href="style.css"/>
   
   
- </header>
+ </head>
  
 <body>
   <h1>Crafty Bee James</h1>
